--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,6 +9,7 @@
     <!-- stylesheet -->
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 
     <!-- Header Start -->
@@ -29,33 +31,102 @@
                 <div class="players">
                     <div class="player">
                         <img src="images/players/player-1.png" alt="">
-                        <h3  class="player-name">top player-1</h3>
+                        <h3 class="player-name">top player-1</h3>
                     </div>
                     <div class="player">
                         <img src="images/players/player-2.png" alt="">
-                        <h3  class="player-name">top player-2</h3>
+                        <h3 class="player-name">top player-2</h3>
                     </div>
                     <div class="player">
                         <img src="images/players/player-3.png" alt="">
-                        <h3  class="player-name">top player-3</h3>
+                        <h3 class="player-name">top player-3</h3>
                     </div>
                     <div class="player">
                         <img src="images/players/player-4.png" alt="">
-                        <h3  class="player-name">top player-4</h3>
+                        <h3 class="player-name">top player-4</h3>
                     </div>
                     <div class="player">
                         <img src="images/players/player-5.png" alt="">
-                        <h3  class="player-name">top player-5</h3>
+                        <h3 class="player-name">top player-5</h3>
                     </div>
                     <div class="player">
                         <img src="images/players/player-6.png" alt="">
-                        <h3  class="player-name">top player-6</h3>
+                        <h3 class="player-name">top player-6</h3>
                     </div>
-            
+
+                </div>
+            </div>
+
+            <hr>
+
+            <!-- Top Blog Sections -->
+
+            <div class="top-blogs">
+                <h2 class="section-title">Top Blogs</h2>
+                <div class="blogs">
+                    <article class="blog">
+                        <div class="thumnail">
+                            <img src="images/blogs/blog-1.png" alt="">
+                        </div>
+                        <div class="blog-info">
+                            <h3 class="blog-title">13 of My Favorite <br> UI/UX Goodies</h3>
+                            <p class="blog-author">By <a href="#">Danny Sapio</a></p>
+                        </div>
+                    </article>
+                    <article class="blog">
+                        <div class="thumnail">
+                            <img src="images/blogs/blog-2.png" alt="">
+                        </div>
+                        <div class="blog-info">
+                            <h3 class="blog-title">UI cheat sheet: <br>
+                                list vs grids</h3>
+                            <p class="blog-author">By <a href="#">Tess Gadd</a></p>
+                        </div>
+                    </article>
+                    <article class="blog">
+                        <div class="thumnail">
+                            <img src="images/blogs/blog-3.png" alt="">
+                        </div>
+                        <div class="blog-info">
+                            <h3 class="blog-title">7 typography tips <br>
+                                for interface design</h3>
+                            <p class="blog-author">By <a href="#">Jeremiah Lam</a></p>
+                        </div>
+                    </article>
+                    <article class="blog">
+                        <div class="thumnail">
+                            <img src="images/blogs/blog-4.png" alt="">
+                        </div>
+                        <div class="blog-info">
+                            <h3 class="blog-title">Your logo is <br>
+                                copied</h3>
+                            <p class="blog-author">By <a href="#">Ferdinand Vogler</a></p>
+                        </div>
+                    </article>
                 </div>
             </div>
 
         </section>
+
+        <!-- Latest Courses -->
+
+        <section class="container">
+            <h2 class="section-title">Latest Courses</h2>
+            <div class="courses">
+                <div class="course">
+                    <div class="course-banner">
+                        <img src="images/courses/course-1.png" alt="">
+                    </div>
+                    <div class="course-info">
+                        <h3 class="course-title">React - The Complete Guide 2020 </h3>
+                        <p class="course-author">Reed Krakoff</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+
+
 
     </main>
 
@@ -67,4 +138,5 @@
 
 
 </body>
+
 </html>
