--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Leaders Board</title>
+    <!-- Font Awesome -->
+    <script src="https://kit.fontawesome.com/126ca5138a.js" crossorigin="anonymous"></script>
     <!-- stylesheet -->
     <link rel="stylesheet" href="style.css">
 </head>
@@ -117,9 +119,69 @@
                     <div class="course-banner">
                         <img src="images/courses/course-1.png" alt="">
                     </div>
-                    <div class="course-info">
+                    <div class="course-details">
                         <h3 class="course-title">React - The Complete Guide 2020 </h3>
                         <p class="course-author">Reed Krakoff</p>
+                        <div class="course-info">
+                            <div class="ratings">
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star empty"></i>
+                                <span>4.5</span>
+                            </div>
+                            <div class="course-duration">
+                                <i class="far fa-clock"></i>
+                                01:30hr
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="course">
+                    <div class="course-banner">
+                        <img src="images/courses/course-2.png" alt="">
+                    </div>
+                    <div class="course-details">
+                        <h3 class="course-title">Powerpoint 2020 <br>Master Powerpoint Cour </h3>
+                        <p class="course-author">Reed Krakoff</p>
+                        <div class="course-info">
+                            <div class="ratings">
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star empty"></i>
+                                <span>4.5</span>
+                            </div>
+                            <div class="course-duration">
+                                <i class="far fa-clock"></i>
+                                01:30hr
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="course">
+                    <div class="course-banner">
+                        <img src="images/courses/course-3.png" alt="">
+                    </div>
+                    <div class="course-details">
+                        <h3 class="course-title">The Complete JavaScript <br>Course 2020 </h3>
+                        <p class="course-author">Reed Krakoff</p>
+                        <div class="course-info">
+                            <div class="ratings">
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star empty"></i>
+                                <span>4.5</span>
+                            </div>
+                            <div class="course-duration">
+                                <i class="far fa-clock"></i>
+                                01:30hr
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
