--- a/index.html
+++ b/index.html
@@ -18,6 +18,25 @@
 
     <header>
 
+        <nav class="navbar-items">
+            <div class="logo-icon">
+                <img src="images/icons/logo.png" alt="">
+                <h2 class="title-name">Idea</h2>
+            </div>
+            <div class="nav-items">
+                <div>
+                    <ul>
+                        <li class="nav-links"><a href="#">Home</a></li>
+                        <li class="nav-links"><a href="#">About</a></li>
+                        <li class="nav-links"><a href="#">Works</a></li>
+                    </ul>
+                </div>
+                <div>
+                    <a href="#"><img class="user-profile" src="images/icons/profile.png" alt="User profile"></a>
+                </div>
+            </div>
+        </nav>
+
     </header>
 
     <!-- Header End -->
